# timeseries.rs

./: Cargo.toml
examples/: plot.rs
src/: index.rs  lib.rs
src/io/: csv.rs
