[package]
name = "timeseries"
version = "0.2.1"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "time Series library"
keywords = ["timeseries"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/timeseries.rs"
homepage = "https://github.com/klangner/timeseries.rs"
documentation = "https://docs.rs/timeseries"
readme = "README.md"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
chrono = "0.4"
csv = "1.4"
dtinfer = "0.1"
derive_more = { version = "2.1.0", features = ["constructor", "from"] }


[features]
default = ["serde"]

[dev-dependencies]
gnuplot = "0.0.46"
